--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-    "name": "interview",
-    "description": "Interview",
-    "version": "0.1.0",
+    "name": "Greeting",
+    "description": "greeting",
+    "version": "0.0.1",
     "homepage": "http://localhost",
     "author": {
         "name": "cybage_ui_team",
-        "email": "cybage_ui_team@interview.com"
+        "email": "cybage_ui_team@greeting.com"
     },
     "src": "src",
     "dependencies": {
@@ -14,7 +14,8 @@
         "require": "~0.5.0",
         "underscore": "~1.5.1",
         "sequelize": "~1.7.0-alpha3",
-        "mysql": "~2.0.0-alpha8"
+        "mysql": "~2.0.0-alpha8",
+        "csv": "~0.3.6"
     },
     "engine": "node >= 0.8.0"
 }
