--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "grunt": "~0.4.1",
     "grunt-contrib-jshint": "~0.6.4",
     "grunt-contrib-uglify": "~0.2.4",
-    "grunt-img": "~0.1.7"
+    "grunt-img": "~0.1.7",
+    "grunt-contrib-requirejs": "~0.4.1",
+    "grunt-contrib-handlebars": "~0.5.10"
   }
 }
