--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "grunt-contrib-uglify": "~0.2.4",
     "grunt-img": "~0.1.7",
     "grunt-contrib-requirejs": "~0.4.1",
-    "grunt-contrib-handlebars": "~0.5.10"
+    "grunt-contrib-handlebars": "~0.5.10",
+    "node-promise": "~0.5.8"
   }
 }
