--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "grunt-contrib-requirejs": "~0.4.1",
     "grunt-contrib-handlebars": "~0.5.10",
     "node-promise": "~0.5.8",
-    "grunt-recess": "~0.4.0"
+    "grunt-recess": "~0.4.0",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-connect": "~0.5.0"
   }
 }
